UI for cards - added schema for future use that contains style for cards - added color chroma js for flexible non declared colors - added contrast color select util function - double card now gets style for colors (uses defaults for now) - fixed width and locations of task cards and fixes for check and edit (WIP) - task grids fix small fixes and cleanups

--- a/src/components/TaskSection/TaskSection.module.css
+++ b/src/components/TaskSection/TaskSection.module.css
@@ -1,2 +1,6 @@
 .task_wrapper {
 }
+
+.task_column {
+  min-width: fit-content;
+}
