--- a/src/components/base/DoableCard/DoableCard.module.css
+++ b/src/components/base/DoableCard/DoableCard.module.css
@@ -1,34 +1,43 @@
 .card_wrapper {
   position: relative;
-  overflow: visible;
+  border: 0.6rem solid;
+  border-radius: 2rem;
+  padding: 1rem;
+  height: 100%;
+}
+
+.card_content {
+  flex: 1;
 }
 
 .checkmark_circle {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 15px;
+  bottom: -1.5rem;
+  right: 1.5rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
-  background-color: #ffffff;
-  border: 1px solid #ccc;
-  justify-content: center;
-  align-items: center;
+  box-shadow: inset 0 0 0 0.2rem #ffffff;
+  border: none;
   cursor: pointer;
   transition: background-color 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .edit_button {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 15px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  border: 1px solid #ccc;
+  width: fit-content;
   justify-content: center;
-  align-items: center;
   cursor: pointer;
   transition: background-color 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  padding: 0;
 }
 
 .in_icon {
